<resources>
    <string name="InfoPopupText">Note Pad\n
version 1.7.2 (2026.05.13)\n
by Trevin Beattie\n
\n
Documentation for this app can be found on its GitHub project page:
https://github.com/Typraeurion/Android-NotePad/releases\n
\n
This program is distributed under the terms of the Gnu Public License,
version 3.0.\n
Encryption code in this program is derived from the Legion of the
Bouncy Castle Inc under an MIT style license.  (See below.).\n
Some of the images used by this program are reproduced from work
created and shared by the Android Open Source Project and used
according to the terms described in the Creative Commons 2.5
Attribution License.\n
\n
[Encryption code] Copyright © 2000-2013 The Legion of the Bouncy
Castle Inc. (http://www.bouncycastle.org)\n
Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\"Software\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:\n
The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.\n
THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n
</string>
    <string name="about">About&#8230;</string>
    <string name="AlertPrivateNote">Private Note</string>
    <string name="AlertUnsavedChangesTitle">Unsaved Changes</string>
    <string name="app_name">Note Pad</string>
    <string name="service_name_export">Export Service</string>
    <string name="service_name_import_xml">Import Service (XML)</string>
    <string name="service_name_password_change">Change Password Service</string>
    <string name="Category_All">All</string>
    <string name="Category_Edit">Edit categories&#8230;</string>
    <string name="Category_Unfiled">Unfiled</string>
    <string-array name="CategoryFilterList">
        <item>@string/Category_All</item>
        <item>@string/Category_Unfiled</item>
    </string-array>
    <string name="CategoryListButtonCancelText">Cancel</string>
    <string name="CategoryListButtonNewText">New</string>
    <string name="CategoryListButtonOKText">OK</string>
    <string name="CategoryName">Category Name</string>
    <string name="ConfirmationTextDeleteNote">Are you sure you wish to delete this note?</string>
    <string name="ConfirmationTextExportPrivateNote">This note is private but will not be encrypted when exporting as a plain text file.  Are you sure?</string>
    <string name="ConfirmationButtonCancel">Cancel</string>
    <string name="ConfirmationButtonDelete">Delete</string>
    <string name="ConfirmationButtonDiscard">Discard</string>
    <string name="ConfirmationButtonOK">OK</string>
    <string name="ConfirmUnsavedChanges">Your note has been changed; going back will lose all changes.  Do you want to discard these changes or cancel going back and continue editing?</string>
    <string name="DetailButtonDelete">Delete&#8230;</string>
    <string name="DetailButtonExport">Export Note&#8230;</string>
    <string name="DetailButtonImport">Import Note&#8230;</string>
    <string name="DetailTextCategory">Category:</string>
    <string name="DetailTextCreated">Created:</string>
    <string name="DetailTextModified">Modified:</string>
    <string name="DetailTextPrivate">Private</string>
    <string name="DialogConfirmPassword">Repeat:</string>
    <string name="DialogEnterPassword">Password:</string>
    <string name="DialogNewPassword">New password:</string>
    <string name="DialogOldPassword">Old password:</string>
    <string name="DialogShowPassword">Show password</string>
    <string name="ErrorCannotFind">Cannot find %s</string>
    <string name="ErrorCategoryID">The category is invalid.</string>
    <string name="ErrorDatabaseNotOpen">Could not open the database</string>
    <string name="ErrorEncryptionFailed">Failed to encrypt the note: %s</string>
    <string name="ErrorExportCantMkdirs">Cannot create directory %s</string>
    <string name="ErrorExportFailed">Export failed</string>
    <string name="ErrorExportPermissionDenied">Permission to write to %s has not been granted.  Please allow access or change the folder then try again.</string>
    <string name="ErrorFailedToAddRecords">Failed to add records</string>
    <string name="ErrorFileNotFound">File not found</string>
    <string name="ErrorImportCantRead">Cannot read file %s</string>
    <string name="ErrorImportFailed">Import failed</string>
    <string name="ErrorImportNotFound">Import file %s not found</string>
    <string name="ErrorImportPermissionDenied">Permission to read %s has not been granted.  Please allow access or move the file to another folder then try again.</string>
    <string name="ErrorImportTooLong">Import file exceeds maximum allowed size</string>
    <string name="ErrorNoRecordsImported">No records were imported</string>
    <string name="ErrorNotImplemented">Not yet implemented</string>
    <string name="ErrorPasswordMismatch">New passwords do not match.</string>
    <string name="ErrorPriority">The priority is invalid.</string>
    <string name="ErrorSDNotFound">Storage media not found</string>
    <string name="ErrorTitle">Error</string>
    <string name="ExportButtonCancel">Cancel</string>
    <string name="ExportButtonOK">Export</string>
    <string name="ExportEditDirectoryHint">Folder in which to save the export file</string>
    <string name="ExportEditFileHint">Name of the export file</string>
    <string name="ExportFileDialogTitle">Export Note Pad File</string>
    <string name="ExportNoteFinishedToast">Exported %s (%d bytes)</string>
    <string name="ExportRadioButtonPrivateFolder">Save to app private storage</string>
    <string name="ExportRadioButtonPublicFolder">Save to shared storage</string>
    <string name="ExportSingleNoteDialogTitle">Export Note To Text File</string>
    <string name="ExportTextDirectory">Folder:</string>
    <string name="ExportTextFile">File Name:</string>
    <string name="ExportTextIncludePrivate">Include Private:</string>
    <string name="ExportTextPasswordNotSetWarning">No password has been set.  Private records will not be encrypted!</string>
    <string name="ExportTextZipCategory">Category:</string>
    <string name="ExportTextZipPasswordRequiredWarning">You must unlock encrypted records in order to export them to a ZIP file with no encryption or ZIP encryption.</string>
    <string name="ExportTextZipEncryption">ZIP Encryption:</string>
    <string name="ExportTextZipEncryptionAES128">AES with 128-bit key</string>
    <string name="ExportTextZipEncryptionAES256">AES with 256-bit key</string>
    <string name="ExportTextZipEncryptionInternal">Keep internal storage encryption (no decryption and re-encryption)</string>
    <string name="ExportTextZipEncryptionNone">No encryption</string>
    <string name="ExportTextZipEncryptionWeak">ZipCrypto (weak)</string>
    <string name="ExportTextZipPassword">ZIP Password:</string>
    <string name="ImportButtonCancel">Cancel</string>
    <string name="ImportButtonOK">Import</string>
    <string name="ImportEditDirectoryHint">Folder containing the import file</string>
    <string name="ImportEditFileHint">Name of the import file</string>
    <string name="ImportEditPasswordHint">Password</string>
    <string name="ImportFileDialogTitle">Import Note Pad File</string>
    <string name="ImportRadioButtonPrivateFolder">File from app private storage</string>
    <string name="ImportRadioButtonPublicFolder">File from shared storage</string>
    <string name="ImportSingleNoteDialogTitle">Import Text File Into Note</string>
    <string name="ImportTextDirectory">Folder:</string>
    <string name="ImportTextFile">File Name:</string>
    <string name="ImportTextImportType">Import Type:</string>
    <string name="ImportTextIncludePrivate">Include Private:</string>
    <string name="ImportTextPassword">Saved Password:</string>
    <string name="ImportTextPasswordNotSetWarning">No password has been entered in Settings.  Private records will not be encrypted!</string>
    <string name="ImportTextShowPassword">Show Password:</string>
    <string-array name="ImportTypeList">
        <item>Clean</item>
        <item>Overwrite</item>
        <item>Update</item>
        <item>Add</item>
        <item>Test</item>
    </string-array>
    <string name="InfoButtonOK">OK</string>
    <string name="ListButtonNew">New</string>
    <string name="MenuExport">Export Data</string>
    <string name="MenuImport">Import Data</string>
    <string name="MenuInfo">About&#8230;</string>
    <string name="MenuLock">Lock Encrypted Notes</string>
    <string name="MenuPasswordChange">Change Password</string>
    <string name="MenuPasswordSet">Set Password</string>
    <string name="MenuSettings">Settings</string>
    <string name="MenuUnlock">Unlock Encrypted Notes</string>
    <string name="NoteButtonDetails">Details&#8230;</string>
    <string name="NoteButtonOK">Done</string>
    <string name="NotificationChannelSilentName">Updating Alarms</string>
    <string name="NotificationChannelSilentDescription">Temporary notification when the app is setting or waking up to an alarm</string>
    <string name="PasswordProtected">[Locked]</string>
    <string-array name="PrefSortByList">
        <item>@string/PrefSortByAlpha</item>
        <item>@string/PrefSortByModTime</item>
    </string-array>
    <string name="PrefSortByAlpha">Alphabetically</string>
    <string name="PrefSortByModTime">Recently Changed</string>
    <string name="PrefTextPassword">Password:</string>
    <string name="PrefTextScrollbarAlways">Always show the scrollbar</string>
    <string name="PrefTextScrollbarNever">Never show the scrollbar</string>
    <string name="PrefTextScrollbarShow">Threshold to show scrollbar in the editor:</string>
    <plurals name="PrefTextScrollbarPages">
        <item quantity="one">%s page</item>
        <item quantity="other">%s pages</item>
    </plurals>
    <string name="PrefTextShowCategory">Show categories</string>
    <string name="PrefTextShowPassword">Show</string>
    <string name="PrefTextShowPrivate">Show private records</string>
    <string name="PrefTextSortBy">Sort by:</string>
    <string name="PromptMountStorage">Please unplug your USB cable or disable USB storage.</string>
    <string name="ProgressMessageDecrypting">Decrypting private records with the old password&#8230;</string>
    <string name="ProgressMessageEncrypting">Encrypting private records with the new password&#8230;</string>
    <string name="ProgressMessageExportCategories">Exporting categories&#8230;</string>
    <string name="ProgressMessageExportItems">Exporting notes&#8230;</string>
    <string name="ProgressMessageExportSettings">Exporting application settings&#8230;</string>
    <string name="ProgressMessageFinish">Finishing&#8230;</string>
    <string name="ProgressMessageImportCategories">Importing categories&#8230;</string>
    <string name="ProgressMessageImportFinished">Import finished</string>
    <string name="ProgressMessageImportItems">Importing notes&#8230;</string>
    <string name="ProgressMessageImportParsing">Parsing the file&#8230;</string>
    <string name="ProgressMessageImportReading">Reading the file&#8230;</string>
    <string name="ProgressMessageImportSettings">Importing application settings&#8230;</string>
</resources>