<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/NoteDetailsLayoutRoot"
  android:layout_height="wrap_content"
  android:layout_width="wrap_content"
  android:orientation="vertical">
    <LinearLayout android:id="@+id/LinearLayout01"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:orientation="horizontal">
	<TextView android:id="@+id/DetailTextCategory"
	 android:gravity="center_vertical|right"
	 android:layout_height="fill_parent"
	 android:layout_width="wrap_content"
	 android:text="@string/DetailTextCategory"/>
	<Spinner android:id="@+id/CategorySpinner"
	 android:layout_height="fill_parent"
	 android:layout_width="fill_parent"
	 android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/LinearLayout02"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:orientation="horizontal">
	<CheckBox android:id="@+id/DetailCheckBoxPrivate"
	 android:layout_height="wrap_content"
	 android:layout_width="wrap_content"/>

	<TextView android:id="@+id/DetailTextPrivate"
	 android:gravity="center_vertical"
	 android:layout_height="fill_parent"
	 android:layout_width="wrap_content"
 	 android:layout_weight="1"
	 android:text="@string/DetailTextPrivate"/>
    </LinearLayout>

    <TableLayout android:id="@+id/TableLayoutTimestamps"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent">
	<TableRow android:id="@+id/TableRow01"
	 android:layout_height="wrap_content"
	 android:layout_width="fill_parent">
	    <TextView android:id="@+id/DetailTextCreatedLabel"
	     android:gravity="right"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:text="@string/DetailTextCreated"/>
	    <TextView android:id="@+id/DetailTextCreatedDate"
	     android:gravity="right"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:paddingLeft="8sp"
	     android:paddingRight="4sp"
	     android:text="Jan 1, 1970 00:00:00"/>
	</TableRow>

	<TableRow android:id="@+id/TableRow02"
	 android:layout_height="wrap_content"
	 android:layout_width="fill_parent">
	    <TextView android:id="@+id/DetailTextModifiedLabel"
	     android:gravity="right"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:text="@string/DetailTextModified"/>
	    <TextView android:id="@+id/DetailTextModifiedDate"
	     android:gravity="right"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:paddingLeft="8sp"
	     android:paddingRight="4sp"
	     android:text="Feb 1, 2025 21:23:00"/>
	</TableRow>
    </TableLayout>

    <LinearLayout android:id="@+id/LinearLayout03"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent">
	<Button android:id="@+id/DetailButtonOK"
	 android:layout_height="fill_parent"
	 android:layout_width="wrap_content"
	 android:layout_weight="1"
	 android:text="@string/ConfirmationButtonOK"/>
	<Button android:id="@+id/DetailButtonCancel"
	 android:layout_height="fill_parent"
	 android:layout_width="wrap_content"
	 android:layout_weight="1"
	 android:text="@string/ConfirmationButtonCancel"/>
	<Button android:id="@+id/DetailButtonDelete"
	 android:layout_height="fill_parent"
	 android:layout_width="wrap_content"
	 android:layout_weight="1"
	 android:text="@string/ConfirmationButtonDelete"/>
    </LinearLayout>
</LinearLayout>
