<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:id="@+id/LinearLayout01"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup android:id="@+id/ExportFolderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/ExportFolderRadioButtonPrivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ExportRadioButtonPrivateFolder"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/ExportFolderRadioButtonShared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ExportRadioButtonPublicFolder" />
        </RadioGroup>

        <TableLayout android:id="@+id/TableLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1">

            <TableRow android:id="@+id/ExportTableRowFileDirectory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3sp">
                <TextView android:text="@string/ExportTextDirectory"
                    android:id="@+id/ExportTextDirectory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:labelFor="@id/ExportEditTextDirectory">
                </TextView>
                <EditText android:text=""
                    android:id="@+id/ExportEditTextDirectory"
                    android:hint="@string/ExportEditDirectoryHint"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions|textMultiLine"
                    android:enabled="false"
                    android:importantForAutofill="no">
                </EditText>
            </TableRow>
            <TableRow android:id="@+id/TableRowFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3sp">
                <TextView android:text="@string/ExportTextFile"
                    android:id="@+id/ExportTextFile"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:labelFor="@id/ExportEditTextFile">
                </TextView>
                <EditText android:text=""
                    android:hint="@string/ExportEditFileHint"
                    android:id="@+id/ExportEditTextFile"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions|textMultiLine"
                    android:importantForAutofill="no">
                </EditText>
            </TableRow>

            <TableRow android:id="@+id/TableRowPrivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3sp">
                <TextView android:text="@string/ExportTextIncludePrivate"
                    android:id="@+id/ExportTextShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:labelFor="@id/ExportCheckBoxIncludePrivate">
                </TextView>
                <CheckBox android:id="@+id/ExportCheckBoxIncludePrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </CheckBox>
            </TableRow>

            <TableRow android:id="@+id/TableRowPasswordNotSetWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="3sp"
                android:visibility="gone">
                <TextView android:text="@string/ExportTextPasswordNotSetWarning"
                    android:id="@+id/ExportTextPasswordNotSetWarning"
                    android:layout_width="wrap_content"
                    android:layout_span="2"
                    android:layout_height="match_parent"
                    android:singleLine="false"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal">
                </TextView>
            </TableRow>

            <TableRow android:id="@+id/TableRowPasswordRequiredWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="3sp"
                android:visibility="gone">
                <TextView android:text="@string/ExportTextZipPasswordRequiredWarning"
                    android:id="@+id/ExportTextPasswordRequiredWarning"
                    android:layout_width="wrap_content"
                    android:layout_span="2"
                    android:layout_height="match_parent"
                    android:singleLine="false"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal">
                </TextView>
            </TableRow>

            <TableRow android:id="@+id/TableRowExportZipCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="3sp"
                android:visibility="gone">
                <TextView android:id="@+id/ExportTextZipCategory"
                    android:text="@string/ExportTextZipCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:labelFor="@id/ExportZipCategorySpinner">
                </TextView>
                <Spinner android:id="@+id/ExportZipCategorySpinner"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/CategoryFilterList">
                </Spinner>
            </TableRow>

            <TableRow android:id="@+id/TableRowExportZipEncryption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3sp"
                android:visibility="gone">
                <TextView android:id="@+id/ExportTextZipEncryption"
                    android:text="@string/ExportTextZipEncryption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:labelFor="@id/ExportZipEncryptionRadioGroup">
                </TextView>

                <RadioGroup android:id="@+id/ExportZipEncryptionRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton android:id="@+id/ExportZipEncryptionRadioButtonNone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ExportTextZipEncryptionNone"/>
                    <RadioButton android:id="@+id/ExportZipEncryptionRadioButtonInternal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ExportTextZipEncryptionInternal"
                        android:checked="true"/>
                    <RadioButton android:id="@+id/ExportZipEncryptionRadioButtonWeak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ExportTextZipEncryptionWeak"/>
                    <RadioButton android:id="@+id/ExportZipEncryptionRadioButtonAES128"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ExportTextZipEncryptionAES128"/>
                    <RadioButton android:id="@+id/ExportZipEncryptionRadioButtonAES256"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ExportTextZipEncryptionAES256"/>
                </RadioGroup>
            </TableRow>

            <TableRow android:id="@+id/TableRowExportZipPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3sp"
                android:visibility="gone">
                <TextView android:id="@+id/ExportTextZipPassword"
                    android:text="@string/ExportTextZipPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:labelFor="@id/ExportEditTextZipPassword">
                </TextView>
                <EditText android:id="@+id/ExportEditTextZipPassword"
                    android:hint="@string/ImportEditPasswordHint"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:importantForAutofill="no">
                </EditText>
            </TableRow>

            <TableRow android:id="@+id/TableRowExportShowPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3sp"
                android:visibility="gone">
                <TextView android:text="@string/ImportTextShowPassword"
                    android:id="@+id/ExportTextShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black">
                </TextView>
                <CheckBox android:id="@+id/ExportCheckBoxShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </CheckBox>
            </TableRow>
        </TableLayout>

        <LinearLayout android:id="@+id/LinearLayout02"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button android:text="@string/ExportButtonOK"
                android:id="@+id/ExportButtonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Button>

            <Button android:text="@string/ExportButtonCancel"
                android:id="@+id/ExportButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Button>
        </LinearLayout>

        <ProgressBar android:id="@+id/ExportProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progress="50">
        </ProgressBar>

        <TextView android:id="@+id/ExportTextProgressMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
</ScrollView>
